<resources>
    <string name="app_name">StepApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_steps">Steps</string>
    <string name="menu_report">Report</string>
    <string name="menu_profile">Profile</string>
    <string name="steps">steps</string>
    <string name="currentStep">0</string>
    <string name="goal6000">goal: 6000</string>
    <string name="start">start</string>
    <string name="toggle_start">start</string>
    <string name="toggle_stop">stop</string>
    <string name="step_permission_denied">permission denied</string>
    <string name="acc_not_available">ACC not available</string>
    <string name="step_not_available">step detector not available</string>
    <string name="Hour">Hour</string>
    <string name="Day">Day</string>

    <string name="_0">0</string>
    <string name="goal">Goal: 100</string>
    <string name="hourly_report">Hourly report</string>
    <string name="daily_report">Daily report</string>

</resources>