<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_steps"
            android:title="@string/menu_steps" />
        <item
            android:id="@+id/nav_hour"
            android:icon="@drawable/ic_menu_steps"
            android:title="@string/Hour" />
        <item
            android:id="@+id/nav_day"
            android:icon="@drawable/ic_menu_steps"
            android:title="@string/Day" />
        <item
            android:id="@+id/menu_report"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
    </group>
</menu>